--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "huffman.js",
   "version": "0.1.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "dev": "babel src --out-dir lib -w",
     "build": "babel src --out-dir lib",
